--- a/Lecteur_audio/css/index_co.css
+++ b/Lecteur_audio/css/index_co.css
@@ -1,7 +1,10 @@
 /* CSS HEADER*/
-
+body{
+    font-family: Jazz LET, fantasy    ;
+}
 h2 {
     color: white;
+    font-family:  fantasy    ;
 }
 
 img {
@@ -21,7 +24,7 @@ margin-left: 1vw;
     display: flex;
     align-self: center;
     margin-left: 20%;
-   
+
 }
 .container_icons{
     display: flex;
@@ -51,7 +54,7 @@ color: rgb(152, 28, 177);
     border-color: #ffffff;
 }
 .form-inline{
-    
+
     display: flex;
     flex-flow: row wrap;
     align-items: center;
@@ -62,8 +65,8 @@ color: rgb(152, 28, 177);
 /* CSS BODY*/
 
 body{
-    background-color: rgb(0, 0, 0);
-    
+    background-color: rgb(100, 100, 100);
+
 }
 .container{
     height: 45vw;
@@ -100,8 +103,8 @@ body{
     font-weight: 800;
 }
 
-/* FIN CSS BODY*/
-/* CSS FOOTER*/
+/*FIN CSS BODY*/
+/*CSS FOOTER*/
 
 footer {
     background-color: grey; 
@@ -115,4 +118,4 @@ footer a {
 footer a:hover {
 color: white;
 }
-/* FIN CSS FOOTER*/
+/*FIN CSS FOOTER*/
