--- a/Lecteur_audio/css/stylecss.css
+++ b/Lecteur_audio/css/stylecss.css
@@ -1,11 +1,20 @@
 body {
-font-family: Arial, Helvetica, sans-serif;
+  font-family: Jazz LET, fantasy	;
+  background: rgb(0,0,0);
+  background: linear-gradient(180deg, rgba(0,0,0,1) 0%, rgba(18,147,195,1) 56%, rgba(189,10,164,1) 91%);
+
 }
+body h1 p{
+  font-family: Jazz LET, fantasy	;
+
+}
+
 
 .jumbotron {
     background-color: rgb(0, 0, 0);
     color: white;
     margin-bottom: 0;
+    font-family: Jazz LET, fantasy	;
 }
 
 #registerlog {
@@ -42,9 +51,7 @@ font-family: Arial, Helvetica, sans-serif;
 }
 .container_block{
     margin-top: 0;
-    height: 50vw;
-    background: rgb(0,0,0);
-    background: linear-gradient(180deg, rgba(0,0,0,1) 0%, rgba(18,147,195,1) 56%, rgba(189,10,164,1) 91%);
+    height: 30vw;
 
 }
 .card-body .text-primary{
@@ -103,7 +110,7 @@ button:hover {
 }
 
 /* Float cancel and signup buttons and add an equal width */
-.cancelbtn, .signupbtn {
+.cancelbtn {
   float: left;
   width: 50%;
 }
@@ -121,6 +128,8 @@ button:hover {
 
   .container {
     padding: 16px;
+    background-color: #11ffee00;  /* Complètement transparent */
+   
   }
   
   span.psw {
@@ -144,10 +153,13 @@ button:hover {
 
 /* Modal Content/Box */
 .modal-content {
-  background-color: #fefefe;
+  color: grey;
   margin: 5% auto 15% auto; /* 5% from the top, 15% from the bottom and centered */
   border: 1px solid #888;
   width: 80%; /* Could be more or less, depending on screen size */
+  background: rgb(0,0,0);
+  background: linear-gradient(180deg, rgba(0,0,0,1) 0%, rgba(18,147,195,1) 56%, rgba(189,10,164,1) 91%);
+
 }
 
 /* Style the horizontal ruler */
@@ -210,3 +222,7 @@ hr {
        width: 100%;
     }
   }
+
+
+.card-deck {
+margin: 0;}
