--- a/Lecteur_audio/css/upload_img.css
+++ b/Lecteur_audio/css/upload_img.css
@@ -1,21 +1,25 @@
-
-
 .container1{
     background: rgb(0,0,0);
     background: linear-gradient(180deg, rgba(0,0,0,1) 0%, rgba(18,147,195,1) 56%, rgba(189,10,164,1) 91%);
-    height: 60vw;
+    height: 40vw;
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     text-align: center;
     justify-content: center;
 }
 
 /* CSS HEADER*/
+
+
 h1 {
     color: white;
+    font-family: Jazz LET, fantasy	;
+  
+    
 }
 h2 {
     color: white;
+    font-family: Jazz LET, fantasy	;
 }
 
 img {
@@ -76,7 +80,7 @@ color: rgb(152, 28, 177);
 /* CSS BODY*/
 form{
     color: white;
-    margin-top: 20vw;
+    margin-top: 5vw;
 }
 
 
@@ -96,3 +100,53 @@ footer a:hover {
 color: white;
 }
 /* FIN CSS FOOTER*/
+
+input { 
+	width: 20%; 
+	margin-bottom: 10px; 
+    margin-right: 30px;
+	background: rgba(0,0,0,0.3);
+	border: none;
+	outline: none;
+	padding: 10px;
+	font-size: 13px;
+	color: #fff;
+	text-shadow: 1px 1px 1px rgba(0,0,0,0.3);
+	border: 1px solid rgba(0,0,0,0.3);
+	border-radius: 4px;
+	box-shadow: inset 0 -5px 45px rgba(100,100,100,0.2), 0 1px 1px rgba(255,255,255,0.2);
+	-webkit-transition: box-shadow .5s ease;
+	-moz-transition: box-shadow .5s ease;
+	-o-transition: box-shadow .5s ease;
+	-ms-transition: box-shadow .5s ease;
+	transition: box-shadow .5s ease;
+}
+input:focus { 
+box-shadow: inset 0 -5px 45px rgba(152, 28, 177), 0 1px 1px rgba(255,255,255,0.2); 
+}
+ form select{
+    width: 10%; 
+	margin-bottom: 10px; 
+    margin-right: 30px;
+	background: rgba(0,0,0,0.3);
+	border: none;
+	outline: none;
+	padding: 10px;
+	font-size: 13px;
+	color: #fff;
+	text-shadow: 1px 1px 1px rgba(0,0,0,0.3);
+	border: 1px solid rgba(0,0,0,0.3);
+	border-radius: 4px;
+	box-shadow: inset 0 -5px 45px rgba(100,100,100,0.2), 0 1px 1px rgba(255,255,255,0.2);
+	-webkit-transition: box-shadow .5s ease;
+	-moz-transition: box-shadow .5s ease;
+	-o-transition: box-shadow .5s ease;
+	-ms-transition: box-shadow .5s ease;
+	transition: box-shadow .5s ease;
+
+ }
+ form .send{
+     width: 25%;
+     height: 20%;
+     margin-top: 5vw;
+ }
